--- a/src/app/auth/register/register.page.html
+++ b/src/app/auth/register/register.page.html
@@ -1,5 +1,8 @@
 <ion-header>
   <ion-toolbar>
+    <ion-buttons slot="start">
+      <ion-back-button defaultHref="login"></ion-back-button>
+    </ion-buttons>
     <ion-title>Register</ion-title>
   </ion-toolbar>
 </ion-header>
@@ -11,24 +14,36 @@
         <ion-col sizeSm="3" offsetSm="3">
           <ion-item>
             <ion-label position="floating">First name</ion-label>
-            <ion-input type="text" formControlName="firstName"></ion-input>
+            <ion-input
+              type="text"
+              required
+              formControlName="firstName"
+            ></ion-input>
           </ion-item>
         </ion-col>
 
         <ion-col sizeSm="3">
           <ion-item>
             <ion-label position="floating">Last name</ion-label>
-            <ion-input type="text" formControlName="lastName"></ion-input>
+            <ion-input
+              type="text"
+              required
+              formControlName="lastName"
+            ></ion-input>
           </ion-item>
         </ion-col>
-    
-        <ion-row *ngIf="registerForm.get('firstName').invalid && registerForm.get('firstName').touched">
+
+        <ion-row
+          *ngIf="registerForm.get('firstName').invalid && registerForm.get('firstName').touched"
+        >
           <ion-col sizeSm="3" offsetSm="3">
             <span>First name must contain at least 1 character.</span>
           </ion-col>
         </ion-row>
 
-        <ion-row *ngIf="registerForm.get('lastName').invalid && registerForm.get('lastName').touched">
+        <ion-row
+          *ngIf="registerForm.get('lastName').invalid && registerForm.get('lastName').touched"
+        >
           <ion-col sizeSm="3">
             <span>Last name must contain at least 1 character.</span>
           </ion-col>
@@ -39,14 +54,20 @@
         <ion-col sizeSm="6" offsetSm="3">
           <ion-item>
             <ion-label position="floating">Email</ion-label>
-            <ion-input type="email" formControlName="email"></ion-input>
+            <ion-input
+              type="email"
+              required
+              formControlName="email"
+            ></ion-input>
           </ion-item>
         </ion-col>
       </ion-row>
 
-      <ion-row *ngIf="registerForm.get('email').invalid && registerForm.get('email').touched">
+      <ion-row
+        *ngIf="registerForm.get('email').invalid && registerForm.get('email').touched"
+      >
         <ion-col size-sm="6" offset-sm="3">
-          <p>Email address is not in valid format.</p>
+          <span>Email address is not in valid format.</span>
         </ion-col>
       </ion-row>
 
@@ -54,20 +75,34 @@
         <ion-col size-sm="6" offset-sm="3">
           <ion-item>
             <ion-label position="floating">Password</ion-label>
-            <ion-input type="password" formControlName="password"></ion-input>
+            <ion-input
+              type="password"
+              required
+              minlength="6"
+              formControlName="password"
+            ></ion-input>
           </ion-item>
         </ion-col>
       </ion-row>
 
-      <ion-row *ngIf="registerForm.get('password').invalid && registerForm.get('password').touched">
+      <ion-row
+        *ngIf="registerForm.get('password').invalid && registerForm.get('password').touched"
+      >
         <ion-col size-sm="6" offset-sm="3">
-          <p>Password must be minimum 6 characters long.</p>
+          <span>Password must be minimum 6 characters long.</span>
         </ion-col>
       </ion-row>
 
       <ion-row>
         <ion-col size-sm="6" offset-sm="3">
-          <ion-button type="submit" color="primary" shape="round" expand="block" [disabled]="registerForm.invalid">Register</ion-button>
+          <ion-button
+            type="submit"
+            color="primary"
+            shape="round"
+            expand="block"
+            [disabled]="registerForm.invalid"
+            >Register</ion-button
+          >
         </ion-col>
       </ion-row>
     </ion-grid>
