--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -16,12 +16,20 @@
         </ion-menu-toggle>
       </ion-list>
     </ion-content>
+    <ion-footer>
+      <ion-menu-toggle>
+        <ion-item (click)="onLogout()">
+          <ion-icon name="log-out-outline"></ion-icon>
+          <ion-label>Logout</ion-label>
+        </ion-item>
+      </ion-menu-toggle>
+    </ion-footer>
   </ion-menu>
 
   <ion-router-outlet id="main"></ion-router-outlet>
 
-  <!-- OVDE TREBA USLOVNO SA *NGIF DA SE PRIKAZUJU TABOVI SAMO AKO JE KORISNIK ULOGOVAN STO SE NALAZI U AUTH SERVICE-->
-  <ion-tabs>
+
+  <ion-tabs *ngIf="showTabs">
     <ion-tab-bar slot="bottom">
       <ion-tab-button tab="home">
         <ion-icon name="home"></ion-icon>
