--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,4 @@
 <ion-app>
-
   <ion-menu side="start" contentId="main">
     <ion-header>
       <ion-toolbar color="primary">
@@ -12,7 +11,25 @@
           <ion-item routerLink="/home">
             <ion-icon name="home-outline" slot="start"></ion-icon>
             <ion-label>Home</ion-label>
-          </ion-item> 
+          </ion-item>
+        </ion-menu-toggle>
+        <ion-menu-toggle>
+          <ion-item routerLink="/profile">
+            <ion-icon name="person-outline" slot="start"></ion-icon>
+            <ion-label>Profile</ion-label>
+          </ion-item>
+        </ion-menu-toggle>
+        <ion-menu-toggle>
+          <ion-item routerLink="/new-transaction">
+            <ion-icon name="add-circle-outline" slot="start"></ion-icon>
+            <ion-label>Transaction</ion-label>
+          </ion-item>
+        </ion-menu-toggle>
+        <ion-menu-toggle>
+          <ion-item routerLink="/search">
+            <ion-icon name="search-outline" slot="start"></ion-icon>
+            <ion-label>Search</ion-label>
+          </ion-item>
         </ion-menu-toggle>
       </ion-list>
     </ion-content>
@@ -28,14 +45,28 @@
 
   <ion-router-outlet id="main"></ion-router-outlet>
 
-
-  <ion-tabs *ngIf="showTabs">
+  <!-- *ngIf="showTabs" -->
+  <ion-tabs >
     <ion-tab-bar slot="bottom">
       <ion-tab-button tab="home">
         <ion-icon name="home"></ion-icon>
         <ion-label>Home</ion-label>
       </ion-tab-button>
+
+      <ion-tab-button tab="profile">
+        <ion-icon name="person"></ion-icon>
+        <ion-label>Profile</ion-label>
+      </ion-tab-button>
+
+      <ion-tab-button tab="new-transaction">
+        <ion-icon name="add-circle"></ion-icon>
+        <ion-label>Transaction</ion-label>
+      </ion-tab-button>
+
+      <ion-tab-button tab="search">
+        <ion-icon name="search"></ion-icon>
+        <ion-label>Search</ion-label>
+      </ion-tab-button>
     </ion-tab-bar>
   </ion-tabs>
-
 </ion-app>
