--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -9,17 +9,68 @@
 </ion-header>
 
 <ion-content>
-  
-  <ion-card *ngFor="let transaction of transactions">
-    <ion-card-header>
-      <ion-card-subtitle>{{transaction.type}}</ion-card-subtitle>
-      <ion-card-title><img class="img" src="{{transaction.pictureUrl}}" width="250px"> {{transaction.purpose}} </ion-card-title>
-    </ion-card-header>
+  <ion-grid>
+    <ion-row>
+      <ion-col sizeMd="6" offsetMd="3" class="ion-text-center" *ngIf="isLoading">
+        <ion-spinner color="primary"></ion-spinner>
+      </ion-col>
+      <ion-col
+        sizeMd="6"
+        offsetMd="3"
+        *ngIf="!isLoading && (!transactions || transactions.length <= 0)"
+        class="ion-text-center"
+      >
+        <p>No transactions found!</p>
+      </ion-col>
+      <ion-card *ngFor="let transaction of transactions">
+        <ion-card-header>
+          <ion-col
+            sizeSm="6"
+            offsetMd="3"
+            *ngIf="!isLoading && transactions && transactions.length > 0"
+          >
+            <ion-card-title
+              ><img
+                class="img"
+                src="{{transaction.pictureUrl}}"
+              />{{transaction.type}}</ion-card-title
+            >
+          </ion-col>
+          <ion-col sizeSm="6">
+            <ion-toolbar>
+              <ion-buttons slot="end">
+                <ion-fab-button
+                  size="small"
+                  color="primary"
+                  (click)="onUpdateTransaction(transaction)"
+                >
+                  <ion-icon name="pencil"></ion-icon>
+                </ion-fab-button>
+                <ion-fab-button size="small" color="danger" (click)="onDeleteTransaction(transaction.id)">
+                  <ion-icon name="trash"></ion-icon>
+                </ion-fab-button>
+              </ion-buttons>
+            </ion-toolbar>
+          </ion-col>
+        </ion-card-header>
 
-    <ion-card-content class="content">
-      Amount: {{transaction.amount| number:'1.2-2'}} RSD
-      Date: {{transaction.date}}
-    </ion-card-content>
-  </ion-card>
-
+        <ion-card-content class="content">
+          <ion-list>
+            <ion-item>
+              <ion-label>Date: {{transaction.date}}</ion-label>
+            </ion-item>
+            <ion-item>
+              <ion-label
+                [color]="transaction.type === 'Deposit' ? 'success' : 'danger'"
+              >
+                Amount: {{(transaction.type === 'Deposit' ? '+' +
+                transaction.amount : '-' + transaction.amount) | number:'1.2-2'}}
+                RSD
+              </ion-label>
+            </ion-item>
+          </ion-list>
+        </ion-card-content>
+      </ion-card>
+    </ion-row>
+  </ion-grid>
 </ion-content>
