--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -11,9 +11,16 @@
 <ion-content>
   <ion-grid>
     <ion-row>
-      <ion-col sizeMd="6" offsetMd="3" class="ion-text-center" *ngIf="isLoading">
+      <ion-col
+        sizeMd="6"
+        offsetMd="3"
+        class="ion-text-center"
+        *ngIf="isLoading"
+      >
         <ion-spinner color="primary"></ion-spinner>
       </ion-col>
+    </ion-row>
+    <ion-row>
       <ion-col
         sizeMd="6"
         offsetMd="3"
@@ -22,21 +29,19 @@
       >
         <p>No transactions found!</p>
       </ion-col>
-      <ion-card *ngFor="let transaction of transactions">
-        <ion-card-header>
+    </ion-row>
+    <ion-card *ngFor="let transaction of transactions">
+      <ion-card-header>
+        <ion-row>
           <ion-col
-            sizeSm="6"
-            offsetMd="3"
+            sizeMd="6"
             *ngIf="!isLoading && transactions && transactions.length > 0"
           >
-            <ion-card-title
-              ><img
-                class="img"
-                src="{{transaction.pictureUrl}}"
-              />{{transaction.type}}</ion-card-title
-            >
+            <ion-avatar
+              ><img class="img" src="{{transaction.pictureUrl}}"
+            /></ion-avatar>
           </ion-col>
-          <ion-col sizeSm="6">
+          <ion-col sizeMd="6">
             <ion-toolbar>
               <ion-buttons slot="end">
                 <ion-fab-button
@@ -46,31 +51,42 @@
                 >
                   <ion-icon name="pencil"></ion-icon>
                 </ion-fab-button>
-                <ion-fab-button size="small" color="danger" (click)="onDeleteTransaction(transaction.id)">
+                <ion-fab-button
+                  size="small"
+                  color="danger"
+                  (click)="onDeleteTransaction(transaction.id)"
+                >
                   <ion-icon name="trash"></ion-icon>
                 </ion-fab-button>
               </ion-buttons>
             </ion-toolbar>
           </ion-col>
-        </ion-card-header>
+        </ion-row>
+        <ion-row>
+          <ion-col sizeSm="6" offsetSm="3">
+            <ion-card-title style="text-align: center"
+              >Purpose: {{transaction.purpose}}</ion-card-title
+            >
+          </ion-col>
+        </ion-row>
+      </ion-card-header>
 
-        <ion-card-content class="content">
-          <ion-list>
-            <ion-item>
-              <ion-label>Date: {{transaction.date}}</ion-label>
-            </ion-item>
-            <ion-item>
-              <ion-label
-                [color]="transaction.type === 'Deposit' ? 'success' : 'danger'"
-              >
-                Amount: {{(transaction.type === 'Deposit' ? '+' +
-                transaction.amount : '-' + transaction.amount) | number:'1.2-2'}}
-                RSD
-              </ion-label>
-            </ion-item>
-          </ion-list>
-        </ion-card-content>
-      </ion-card>
-    </ion-row>
+      <ion-list class="ion-no-padding">
+        <ion-item>
+          <ion-label>Type: {{transaction.type}}</ion-label>
+        </ion-item>
+        <ion-item>
+          <ion-label>Date: {{transaction.date}}</ion-label>
+        </ion-item>
+        <ion-item>
+          <ion-label
+            [color]="transaction.type === 'Deposit' ? 'success' : 'danger'"
+          >
+            Amount: {{(transaction.type === 'Deposit' ? '+' + transaction.amount
+            : '-' + transaction.amount) | number:'1.2-2'}} RSD
+          </ion-label>
+        </ion-item>
+      </ion-list>
+    </ion-card>
   </ion-grid>
 </ion-content>
