--- a/src/app/new-transaction/new-transaction.page.html
+++ b/src/app/new-transaction/new-transaction.page.html
@@ -9,18 +9,30 @@
 
 <ion-content>
   <form
-    #transactionForm="ngForm"
-    (ngSubmit)="!title ? onAddTransaction(transactionForm) : onUpdateTransaction(transactionForm)"
+    [formGroup]="transactionForm"
+    (ngSubmit)="!title ? onAddTransaction() : onUpdateTransaction()"
   >
     <ion-grid>
       <ion-row>
         <ion-col sizeSm="6" offsetSm="3">
           <ion-item>
             <ion-label position="floating">Type:</ion-label>
-            <ion-select [ngModel]="type" name="type" required>
-              <ion-select-option *ngFor="let type of transactionTypes" [value]="type">{{type}}</ion-select-option>
+            <ion-select name="type" required formControlName="type">
+              <ion-select-option
+                *ngFor="let type of transactionTypes"
+                [value]="type"
+                >{{type}}</ion-select-option
+              >
             </ion-select>
           </ion-item>
+        </ion-col>
+      </ion-row>
+
+      <ion-row
+        *ngIf="transactionForm.get('type').invalid && transactionForm.get('type').touched"
+      >
+        <ion-col size-sm="6" offset-sm="3">
+          <span>Invalid entry.</span>
         </ion-col>
       </ion-row>
 
@@ -28,8 +40,20 @@
         <ion-col sizeSm="6" offsetSm="3">
           <ion-item>
             <ion-label position="floating">Purpose:</ion-label>
-            <ion-input type="text" [ngModel]="purpose" name="purpose" required></ion-input>
+            <ion-input
+              type="text"
+              required
+              formControlName="purpose"
+            ></ion-input>
           </ion-item>
+        </ion-col>
+      </ion-row>
+
+      <ion-row
+        *ngIf="transactionForm.get('purpose').invalid && transactionForm.get('purpose').touched"
+      >
+        <ion-col size-sm="6" offset-sm="3">
+          <span>Invalid entry.</span>
         </ion-col>
       </ion-row>
 
@@ -37,8 +61,20 @@
         <ion-col sizeSm="6" offsetSm="3">
           <ion-item>
             <ion-label position="floating">Amount:</ion-label>
-            <ion-input type="number" [ngModel]="amount" name="amount" required></ion-input>
+            <ion-input
+              type="number"
+              required
+              formControlName="amount"
+            ></ion-input>
           </ion-item>
+        </ion-col>
+      </ion-row>
+
+      <ion-row
+        *ngIf="transactionForm.get('amount').invalid && transactionForm.get('amount').touched"
+      >
+        <ion-col size-sm="6" offset-sm="3">
+          <span>Invalid entry.</span>
         </ion-col>
       </ion-row>
 
@@ -46,8 +82,16 @@
         <ion-col sizeSm="6" offsetSm="3">
           <ion-item>
             <ion-label position="fixed">Date:</ion-label>
-            <ion-input type="date" [ngModel]="date" name="date" required></ion-input>
+            <ion-input type="date" required formControlName="date"></ion-input>
           </ion-item>
+        </ion-col>
+      </ion-row>
+
+      <ion-row
+        *ngIf="transactionForm.get('date').invalid && transactionForm.get('date').touched"
+      >
+        <ion-col size-sm="6" offset-sm="3">
+          <span>Invalid entry.</span>
         </ion-col>
       </ion-row>
 
@@ -55,8 +99,20 @@
         <ion-col sizeSm="6" offsetSm="3">
           <ion-item>
             <ion-label position="floating">Picture URL:</ion-label>
-            <ion-input type="text" [ngModel]="pictureUrl" name="pictureUrl" required></ion-input>
+            <ion-input
+              type="text"
+              required
+              formControlName="pictureUrl"
+            ></ion-input>
           </ion-item>
+        </ion-col>
+      </ion-row>
+
+      <ion-row
+        *ngIf="transactionForm.get('pictureUrl').invalid && transactionForm.get('pictureUrl').touched"
+      >
+        <ion-col size-sm="6" offset-sm="3">
+          <span>Invalid entry.</span>
         </ion-col>
       </ion-row>
 
@@ -68,7 +124,7 @@
             expand="block"
             [disabled]="transactionForm.invalid || !transactionForm.touched"
           >
-          {{!title ? 'Add' : 'Edit'}}
+            {{!title ? 'Add' : 'Edit'}}
           </ion-button>
         </ion-col>
       </ion-row>
