--- a/src/app/profile/profile.page.html
+++ b/src/app/profile/profile.page.html
@@ -7,4 +7,22 @@
   </ion-toolbar>
 </ion-header>
 
-<ion-content> </ion-content>
+<ion-content>
+  <ion-list>
+    <ion-item lines="none">
+      <img src="../../../assets/img/user.png" alt="user" width="200" style="margin: 0 auto;"/>
+    </ion-item>
+    <ion-item>
+      <ion-label>First name: {{user.firstName}}</ion-label>
+    </ion-item>
+    <ion-item>
+      <ion-label>Last name: {{user.lastName}}</ion-label>
+    </ion-item>
+    <ion-item>
+      <ion-label>Email: {{user.email}}</ion-label>
+    </ion-item>
+    <ion-item>
+      <ion-label>Current balance: {{user.balance}} (RSD)</ion-label>
+    </ion-item>
+  </ion-list>
+</ion-content>
