--- a/src/app/profile/profile.page.html
+++ b/src/app/profile/profile.page.html
@@ -10,7 +10,12 @@
 <ion-content>
   <ion-list>
     <ion-item lines="none">
-      <img src="../../../assets/img/user.png" alt="user" width="200" style="margin: 0 auto;"/>
+      <img
+        src="../../../assets/img/user.png"
+        alt="user"
+        width="200"
+        style="margin: 0 auto"
+      />
     </ion-item>
     <ion-item>
       <ion-label>First name: {{user.firstName}}</ion-label>
@@ -22,7 +27,7 @@
       <ion-label>Email: {{user.email}}</ion-label>
     </ion-item>
     <ion-item>
-      <ion-label>Current balance: {{user.balance}} (RSD)</ion-label>
+      <ion-label>Current balance: {{balance | number:'1.2-2'}} RSD</ion-label>
     </ion-item>
   </ion-list>
 </ion-content>
