Building filter modal pop-up

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -27,8 +27,8 @@
         </ion-menu-toggle>
         <ion-menu-toggle>
           <ion-item routerLink="/search">
-            <ion-icon name="search-outline" slot="start"></ion-icon>
-            <ion-label>Search</ion-label>
+            <ion-icon name="pie-chart-outline" slot="start"></ion-icon>
+            <ion-label>Stats</ion-label>
           </ion-item>
         </ion-menu-toggle>
       </ion-list>
@@ -46,7 +46,7 @@
   <ion-router-outlet id="main"></ion-router-outlet>
 
   <!-- *ngIf="showTabs" -->
-  <ion-tabs >
+  <ion-tabs>
     <ion-tab-bar slot="bottom">
       <ion-tab-button tab="home">
         <ion-icon name="home"></ion-icon>
@@ -64,8 +64,8 @@
       </ion-tab-button>
 
       <ion-tab-button tab="search">
-        <ion-icon name="search"></ion-icon>
-        <ion-label>Search</ion-label>
+        <ion-icon name="pie-chart"></ion-icon>
+        <ion-label>Stats</ion-label>
       </ion-tab-button>
     </ion-tab-bar>
   </ion-tabs>
