--- a/src/app/search/search-modal/search-modal.component.html
+++ b/src/app/search/search-modal/search-modal.component.html
@@ -14,12 +14,63 @@
 </ion-header>
 
 <ion-content>
-  <form (ngSubmit)="onFilter()">
+  <form
+    #modalForm="ngForm"
+    (ngSubmit)="onFilter(modalForm)"
+    style="margin-top: 10%"
+  >
     <ion-grid>
       <ion-row>
-        <ion-col size-sm="6" offset-sm="3">
-          <ion-button type="submit" color="primary" expand="block">
-            Filter
+        <ion-col sizeSm="5">
+          <ion-label color="primary" style="padding-left: 10px"
+            >From date:</ion-label
+          >
+          <ion-input
+            type="date"
+            name="fromDate"
+            [(ngModel)]="fromDate"
+            required
+          ></ion-input>
+        </ion-col>
+        <ion-col sizeSm="5" offsetSm="2">
+          <ion-label color="primary" style="padding-left: 10px"
+            >To date:</ion-label
+          >
+          <ion-input
+            type="date"
+            name="toDate"
+            [(ngModel)]="toDate"
+            [min]="fromDate"
+            required
+          ></ion-input>
+        </ion-col>
+      </ion-row>
+      <ion-row>
+        <ion-col>
+          <ion-range
+            min="1000"
+            max="100000"
+            step="50"
+            dualKnobs="true"
+            pin="true"
+            name="range"
+            [(ngModel)]="range"
+            required
+          >
+            <ion-label color="primary" slot="start">MIN</ion-label>
+            <ion-label color="primary" slot="end">MAX</ion-label>
+          </ion-range>
+        </ion-col>
+      </ion-row>
+      <ion-row>
+        <ion-col sizeSm="6" offsetSm="3">
+          <ion-button
+            type="submit"
+            color="primary"
+            expand="block"
+            [disabled]="modalForm.invalid || !modalForm.touched"
+          >
+            Search
           </ion-button>
         </ion-col>
       </ion-row>
