--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -45,8 +45,7 @@
 
   <ion-router-outlet id="main"></ion-router-outlet>
 
-  <!-- *ngIf="showTabs" -->
-  <ion-tabs>
+  <ion-tabs *ngIf="showTabs">
     <ion-tab-bar slot="bottom">
       <ion-tab-button tab="home">
         <ion-icon name="home"></ion-icon>
