--- a/src/app/new-transaction/new-transaction.page.html
+++ b/src/app/new-transaction/new-transaction.page.html
@@ -31,7 +31,7 @@
       <ion-row
         *ngIf="(transactionForm.get('type').invalid && !transactionForm.get('type').touched) && transactionForm.get('type').dirty"
       >
-        <ion-col size-sm="6" offset-sm="3">
+        <ion-col sizeSm="6" offsetSm="3">
           <span>Please choose a transaction type.</span>
         </ion-col>
       </ion-row>
@@ -52,7 +52,7 @@
       <ion-row
         *ngIf="transactionForm.get('purpose').invalid && transactionForm.get('purpose').touched"
       >
-        <ion-col size-sm="6" offset-sm="3">
+        <ion-col sizeSm="6" offsetSm="3">
           <span>Purpose must contain at least 1 character.</span>
         </ion-col>
       </ion-row>
@@ -73,7 +73,7 @@
       <ion-row
         *ngIf="transactionForm.get('amount').invalid && transactionForm.get('amount').touched"
       >
-        <ion-col size-sm="6" offset-sm="3">
+        <ion-col sizeSm="6" offsetSm="3">
           <span *ngIf="transactionForm.get('amount').hasError('required')">Amount must contain at least 1 digit.</span>
           <span *ngIf="transactionForm.get('amount').hasError('min')">Amount must be greater than 0.</span>
           <span *ngIf="transactionForm.get('amount').hasError('max') && transactionForm.get('type').value == transactionTypes[1]">Your current balance ({{balance}} RSD) is less than withdrawal amount.</span>
@@ -92,7 +92,7 @@
       <ion-row
         *ngIf="transactionForm.get('date').invalid && transactionForm.get('date').touched"
       >
-        <ion-col size-sm="6" offset-sm="3">
+        <ion-col sizeSm="6" offsetSm="3">
           <span>Please enter a valid date.</span>
         </ion-col>
       </ion-row>
@@ -113,7 +113,7 @@
       <ion-row
         *ngIf="transactionForm.get('pictureUrl').invalid && transactionForm.get('pictureUrl').touched"
       >
-        <ion-col size-sm="6" offset-sm="3">
+        <ion-col sizeSm="6" offsetSm="3">
           <span>Please enter a valid picture url.</span>
         </ion-col>
       </ion-row>
