Image upload almost finished

--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -38,7 +38,7 @@
             *ngIf="!isLoading && transactions && transactions.length > 0"
           >
             <ion-avatar
-              ><img class="img" src="{{transaction.pictureUrl}}"
+              ><img class="img" src="{{transaction.imageUrl}}"
             /></ion-avatar>
           </ion-col>
           <ion-col sizeMd="6">
