--- a/src/app/search/search.page.html
+++ b/src/app/search/search.page.html
@@ -40,7 +40,7 @@
         <ion-list *ngFor="let transaction of searchedTransactions">
           <ion-item>
             <ion-avatar slot="start">
-              <ion-img [src]="transaction.pictureUrl"></ion-img>
+              <ion-img [src]="transaction.imageUrl"></ion-img>
             </ion-avatar>
             <ion-label>
               <h5>{{ transaction.purpose }}</h5>
