Small changes have been done

--- a/src/app/search/search-modal/search-modal.component.html
+++ b/src/app/search/search-modal/search-modal.component.html
@@ -48,8 +48,8 @@
       <ion-row>
         <ion-col>
           <ion-range
-            min="1000"
-            max="100000"
+            [min]="1"
+            [max]="max"
             step="50"
             dualKnobs="true"
             pin="true"
