--- a/src/app/new-transaction/image-input/image-input.component.html
+++ b/src/app/new-transaction/image-input/image-input.component.html
@@ -3,7 +3,7 @@
     role="button"
     class="image"
     (click)="onPickImage()"
-    [src]="selectedImage"
+    [src]="(isFetchedImage && !selectedImage) ? fetchedImage : selectedImage"
     *ngIf="(selectedImage && showPreview) || (fetchedImage && showPreview)"
   ></ion-img>
   <ion-button
